--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#004040</color>
-    <color name="colorPrimaryDark">#003030</color>
-    <color name="colorPrimaryVeryDark">#002020</color>
+    <color name="colorPrimary">#22252b</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorPrimaryVeryDark">#292c33</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="defaultText">#ffffff</color>
 
-    <color name="buttonBackground">#004040</color>
+    <color name="buttonBackground">#2d323a</color>
 </resources>
